Academy: Tester created -> static test for model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CocoonAcademy)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CocoonAcademy main.cpp Models/Academy/Academy.cpp Models/Academy/Academy.h Models/AcademyBase/AcademyBase.h)
+add_executable(CocoonAcademy main.cpp Models/Academy/Academy.cpp Models/Academy/Academy.h Models/AcademyBase/AcademyBase.h Testers/Models/AcademyModelTester.h)
