Alumno: Tester-> some methods are private. Evaluacion: Model created.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CocoonAcademy)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(CocoonAcademy main.cpp Models/Academy/Academy.cpp Models/Academy/Academy.h Models/AcademyBase/AcademyBase.h Testers/Models/AcademyModelTester.h Models/TiposEscuelas.h Models/Curso/Curso.cpp Models/Curso/Curso.h Testers/Models/CursoTester.h Testers/executeTesting.h Models/TiposJornadas.h Models/Asignatura/Asignatura.cpp Models/Asignatura/Asignatura.h Testers/Models/AsignaturaTester.h Models/Alumno/Alumno.cpp Models/Alumno/Alumno.h Testers/Models/AlumnoTester.h)
+add_executable(CocoonAcademy main.cpp Models/Academy/Academy.cpp Models/Academy/Academy.h Models/AcademyBase/AcademyBase.h Testers/Models/AcademyModelTester.h Models/TiposEscuelas.h Models/Curso/Curso.cpp Models/Curso/Curso.h Testers/Models/CursoTester.h Testers/executeTesting.h Models/TiposJornadas.h Models/Asignatura/Asignatura.cpp Models/Asignatura/Asignatura.h Testers/Models/AsignaturaTester.h Models/Alumno/Alumno.cpp Models/Alumno/Alumno.h Testers/Models/AlumnoTester.h Models/Evaluacion/Evaluacion.cpp Models/Evaluacion/Evaluacion.h)
